--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   
   <header>
     <nav class="navbar navbar-expand-lg bg-dark-subtle py-2 px-5"> 
-      <a class="navbar-brand position-absolute" href="/">Botafogo</a>
+      <a class="navbar-brand position-absolute" href="/">Healthy Tomatoes</a>
       <div class="mx-auto"> 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
