--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   </div>
 
-  <div class="container-sm mt-2 mb-4">
+  <div class="mt-2 mb-4">
     <%= link_to new_genre_path, class: "btn btn-dark" do %>
       Add new Genre
     <% end %>
