--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,13 +1,26 @@
-<div class="container w-50 ">
-  <div class="shadow container-sm mt-4 p-4 bg-dark-subtle rounded">
-    <% @movies.each do |movie| %>
-      <div class="row py-2 my-2 rounded border border-dark">
-        <%= link_to "#{movie.title} (#{movie.release_date.strftime('%Y')})", movie_path(movie.id), class: "btn" %>
-      </div>
-    <% end %>
+<div class="container w-75 ">
+  <div class="shadow container-sm mt-4 p-4 bg-dark-subtle rounded text-center">
+    <h3><%= "#{@genre.name} movies" %></h3>
+    <div class="row">
+      <% @movies.each do |movie| %>
+        <div class="col-sm-4 w-25 position-relative pt-2">
+          <a href="<%= movie_path(movie) %>">
+          <div class="shadow card">          
+            <img src="<%= movie.image_url%>" alt="image" class="card-img-top">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-start bg-dark bg-opacity-50  bg-gradient">
+              <div class="text-white fw-semibold fs-5 pt-5"><%= "#{movie.genre.name} • #{movie.release_date.strftime("%Y")}" %></div>
+            </div>
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-start">
+              <div class="text-light fw-semibold fs-2 pt-1"><%= movie.title %></div>
+            </div>
+          </div>
+          </a>
+        </div>
+      <% end %>
+    </div>
   </div>
 
-  <div class="container-sm mt-2 mb-4">
+  <div class="mt-2 mb-4">
     <%= link_to "Edit Genre", edit_genre_path, class: "btn btn-dark"%>
   </div>
 </div>
