--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -14,6 +14,11 @@
     <%= f.text_area :summary, class: "form-control datepicker", rows:"4" %>     
   </div>
 
+  <div class="mt-3">
+    <%= f.label "Poster Image URL", class: "form-label" %>
+    <%= f.text_field :image_url, class: "form-control"%>     
+  </div>
+
   <div class="mt-3 row">
     <div class="col">
       <%= f.label "Country", class: "form-label" %>
