--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,20 +1,28 @@
-<div class="container w-75 ">
+<div class="container">
   <div class="shadow container-sm mt-4 p-4 bg-dark-subtle rounded">
     <div class="row">
       <% @movies.each do |movie| %>
-      <div>
-        <img src="https://m.media-amazon.com/images/I/81kz06oSUeL._AC_SL1500_.jpg" alt="image" class="img-fluid">
-        <%= link_to "#{movie.title} (#{movie.release_date.strftime('%Y')})", movie_path(movie.id), class: "btn" %>
-      </div>
+        <div class="col-sm-4 w-25 position-relative pt-4">
+          <a href="<%= movie_path(movie) %>">
+          <div class="shadow card">          
+            <img src="<%= movie.image_url%>" alt="image" class="card-img-top">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-start bg-dark bg-opacity-50  bg-gradient">
+              <div class="text-white fw-semibold fs-5 pt-5"><%= "#{movie.genre.name} • #{movie.release_date.strftime("%Y")}" %></div>
+            </div>
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-start">
+              <div class="text-light fw-semibold fs-2 pt-1"><%= movie.title %></div>
+            </div>
+          </div>
+          </a>
+        </div>
       <% end %>
     </div>
   </div>
 
-  <div class="container-sm mt-2 mb-4">
+  <div class="mt-2 mb-4">
     <%= link_to new_movie_path, class: "btn btn-dark" do %>
       Add new Movie
     <% end %>
   </div>
 </div>
-
 
