--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,7 +9,7 @@
     <p>Summary: <span><%= @movie.summary%></span></p>
   </div>
 
-  <div class="container-sm mt-2 mb-4">
+  <div class="mt-2 mb-4">
     <%= link_to "Edit", edit_movie_path, class: "btn btn-dark"%>
   </div>
 </div>
