add column "is_released" to movie model update movie view form to add a check to set is_released update movie view index to show above all movie cards either "Available" or "Coming Soon", also in Director view show update movie view show to show Released? either yes/no

--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -16,6 +16,7 @@
     <div class="row">
       <% @movies.each do |movie| %>
         <div class="col-sm-3 w-25 position-relative pt-2">
+          <p><%= movie.is_released ? "Available" : "Coming Soon..." %></p>
           <a href="<%= movie_path(movie) %>">
           <div class="shadow card">          
             <img src="<%= movie.image_url%>" alt="image" class="card-img-top">
