--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -14,9 +14,17 @@
     <%= f.text_area :summary, class: "form-control datepicker", rows:"4" %>     
   </div>
 
-  <div class="mt-3">
-    <%= f.label "Poster Image URL", class: "form-label" %>
-    <%= f.text_field :image_url, class: "form-control"%>     
+  <div class="mt-3 row">
+    <div class="col">
+      <%= f.label "Poster Image URL", class: "form-label" %>
+      <%= f.text_field :image_url, class: "form-control"%> 
+    </div>
+    <div class="col d-flex justify-content-center align-items-center pt-4 ">
+      <div class="form-check">
+        <%= f.label "Is Released?", class: "form-check-label" %>
+        <%= f.check_box :is_released, class: "form-check-input"%> 
+      </div>
+    </div>
   </div>
 
   <div class="mt-3 row">
